plugins {
    id 'io.github.gradle-nexus.publish-plugin' version '2.0.0'
    id "com.github.spotbugs" version "latest.release"
    id "com.diffplug.spotless" version "latest.release"
    id "org.sonarqube" version "latest.release"
    id "se.bjurr.gitchangelog.git-changelog-gradle-plugin" version "latest.release"
}

apply plugin: 'com.github.node-gradle.node'

// ─── Node.js (installed at root, shared by frontend subprojects) ─────
node {
    version = nodeVersion
    download = true
    workDir = file('.gradle/nodejs')
}

// ─── Apply java conventions to all subprojects ───────────────────────
subprojects {
    apply plugin: 'java'
    apply plugin: 'webswing.java-conventions'
    apply plugin:  'pmd'
    apply plugin:  'checkstyle'
    apply plugin:  "com.github.spotbugs"
    apply plugin:  "com.diffplug.spotless"

    group = rootProject.group
    version = rootProject.version

    dependencies {
        compileOnly "org.eclipse.jetty.toolchain:jetty-servlet-api:${jettyServletApiVersion}"
        compileOnly "org.eclipse.jetty.toolchain:jetty-javax-websocket-api:${jettyWebsocketApiVersion}"
    }

    java {
        toolchain {
            sourceCompatibility = '17'
            targetCompatibility = '17'
            languageVersion.set(JavaLanguageVersion.of(17))
        }
    }

    spotbugs {
        excludeFilter = rootProject.file("config/spotbugs/spotBugsExcludeFilter.xml")
        spotbugsTest.enabled = false
    }

    pmd {
        toolVersion = "7.22.0"

        consoleOutput = true
        ignoreFailures = true
        sourceSets = [ sourceSets.main, sourceSets.test]

        // clear the ruleset in order to use configured rules only
        // ruleSets = []

        rulesMinimumPriority = 1
        ruleSetFiles = rootProject.files("config/pmd/ruleset.xml")

        pmdMain {
            excludes = [
                    "build/generated/*"
            ]
        }
    }

    checkstyle {
        sourceSets = [sourceSets.main, sourceSets.test]
        configFile = rootProject.file('config/checkstyle/checkstyle.xml')

    }

    tasks.withType(Checkstyle).configureEach {
        exclude '**/module-info.java', '**/package-info.java'
    }

    spotless {
        // optional: limit format enforcement to just the files changed by this feature branch
        ratchetFrom 'origin/master'

        format 'misc', {
            // define the files to apply `misc` to
            target '*.rst', '*.md', '.gitignore'

            // define the steps to apply to those files
            trimTrailingWhitespace()
            leadingTabsToSpaces(4) // or spaces. Takes an integer argument if you don't like 4
            endWithNewline()
        }
        java {
            leadingTabsToSpaces(4)
            eclipse().configFile('config/formatter/eclipse-java-google-style.xml')
        }
    }
}

// ─── Sonatype Central publishing ─────────────────────────────────────
// Uses the OSSRH Staging API compatibility layer for Central Portal.
// Authenticate with a Central Portal user token (not legacy OSSRH creds).
// Set sonatypeUsername / sonatypePassword in ~/.gradle/gradle.properties
// or via ORG_GRADLE_PROJECT_sonatypeUsername / ORG_GRADLE_PROJECT_sonatypePassword env vars.
nexusPublishing {
    repositories {
        sonatype {
            nexusUrl = uri('https://ossrh-staging-api.central.sonatype.com/service/local/')
            snapshotRepositoryUrl = uri('https://central.sonatype.com/repository/maven-snapshots/')
        }
    }
}

// ─── GPG signing (profile: publish) ──────────────────────────────────
if (project.hasProperty('publish')) {
    subprojects {
        apply plugin: 'signing'
        signing {
            sign publishing.publications
        }
    }
}

// ─── Release: attach sources + javadoc jars ──────────────────────────
if (project.hasProperty('release')) {
    subprojects {
        plugins.withType(JavaPlugin).tap {
            configureEach {
                java {
                    withSourcesJar()
                    withJavadocJar()
                    sourceCompatibility = '17'
                    targetCompatibility = '17'
                    toolchain {
                        languageVersion.set(JavaLanguageVersion.of(17))
                    }
                }
            }
        }
    }
}

// ─── Copy the final WAR to root build/libs for convenience ──────────
apply plugin: 'base'

tasks.register('copyWar', Copy) {
    dependsOn ':webswing-server:webswing-server-war:repackageWar'
    from project(':webswing-server:webswing-server-war').layout.buildDirectory.dir('libs')
    include '*.war'
    into layout.buildDirectory.dir('dist')
}

tasks.register('copyDist', Copy) {
    dependsOn ':webswing-assembly:distZip', ':webswing-assembly:distTar'
    from project(':webswing-assembly').layout.buildDirectory.dir('dist')
    into layout.buildDirectory.dir('dist')
}

assemble.dependsOn 'copyWar', 'copyDist'

// ─── Ultra-clean: wipe everything including Node, node_modules, caches ──
tasks.register('ultraClean') {
    dependsOn 'clean'
    group = 'build'
    description = 'Deep clean: Gradle builds + Node installation + node_modules + webpack target/ + buildSrc caches'

    doLast {
        // Root-level Node installation
        delete '.gradle/nodejs'
        delete '.gradle/.cache'

        // buildSrc caches
        delete 'buildSrc/.gradle'
        delete 'buildSrc/build'

        // Find and delete all node_modules and webpack target/ dirs
        def dirsToClean = ['node_modules', 'target', '.tmp']
        rootProject.allprojects.each { proj ->
            dirsToClean.each { dirName ->
                def d = proj.file(dirName)
                if (d.exists()) {
                    println "  Cleaning ${proj.path}/${dirName}"
                    delete d
                }
            }
        }

        // Also clean root node_modules if present
        def rootNodeModules = file('node_modules')
        if (rootNodeModules.exists()) {
            println "  Cleaning root node_modules"
            delete rootNodeModules
        }

        // Assembly dist output
        delete 'webswing-assembly/dist'

        println "\nUltra-clean complete. Next build will re-download Node and reinstall npm packages."
    }
}

sonar {
    properties {
        property("sonar.host.url", "https://sonarcloud.io")
        property("sonar.organization", "manticore-projects")
        property("sonar.projectKey", "manticore-projects")
        property("sonar.token", System.getenv("SONAR_TOKEN")
                ?: providers.gradleProperty("SONARQUBE_TOKEN").getOrElse(""))
    }
}
